...
    <string name="signup_failed">"Sign Up failed"</string>
    <string name="update_users_failed">"Updating users failed"</string>


    <string name="rb_label_swiper_edition">Swipe R. Editon</string>
    <string name="rb_label_dragdrop"><![CDATA[Drag & Drop]]></string>
    <string name="edit_dialog_cancel_b">Cancel</string>
    <string name="edit_dialog_update_b">Confirm</string>
    <string name="menu_view_proof_picture">Proof Photos</string>
    <string name="refresh">Refresh</string>
    <string name="hint_dialog_client_id">Client ID</string>
    <string name="hint_dialog_timestamp">Timestamp</string>
    <string name="hint_dialog_waiting_time">Waiting time</string>
    <string name="hint_dialog_rate">Rate</string>
...
    <string name="username_not_unique">Sorry, that username is already taken. Please choose a different username.</string>
    <string name="empty_username">Please enter username to add user.</string>
    <string name="roadbookpreferencescheckedtextview">RoadBookPreferencesCheckedTextView</string>
    <string name="application_settings">Application Settings</string>
    <string name="save_roadbook_preferences">Save RoadBook Preferences</string>
    <string name="load_road_book_back_up">Load RoadBook back-up</string>
    <string name="delete_all_roadbook">Delete all RoadBook</string>
    <string name="delete_all_roadbook_dialog_title">Delete all the current RoadBook records ?</string>
    <string name="positive_label_delete_all_roadbook_dialog">Confirm</string>
    <string name="negative_label_delete_all_roadbook_dialog">No !</string>
    <string name="snap_delete_all_roadbook">All Roadbook records have been deleted</string>
    <string name="snap_load_roadbook_backup">The last backup has been loaded</string>
    <string name="managing_client_text">Managing Client: </string>
    <string name="managing_client">\@managing_client</string>
    <string name="super_client_username">Super client username</string>
...
    <string name="contact_not_found">Contact not found</string>
    <string name="boss_maps">Boss Maps</string>
    <string name="decline_end_shift">Not now</string>
    <string name="invalid_client_id_snack_bar">Invalid Client ID, please correct it</string>
    <string name="invalid_client_id_text">Invalid Client ID</string>
    <string name="refresh_button">RefreshButton</string>
    <string name="bag_button">BagButton</string>
    <string name="location_switch">LocationSwitch</string>
    <string name="package_schedule_icon">package schedule icon</string>
    <string name="package_name_hint">Package Name</string>
    <string name="package_recipient_hint">Recipient</string>
    <string name="package_notes_hint">Package notes</string>
    <string name="confirm_label_pack_creation_dialog">Confirm</string>
    <string name="menu_date_picker">date_picker</string>
    <string name="menu_loading_bar">menu_loading_bar</string>
    <string name="notes_presence_indicator">Notes presence indicator</string>
    <string name="content_description_media">content_description_media</string>
    <string name="title">title\n</string>
    <string name="secondary_text">secondary_text</string>
...
